--- a/style.css
+++ b/style.css
@@ -5,6 +5,7 @@ Description: A Custom Child Theme For Divi
 Author: GippslandWeb	
 Author URI: http://gippslandweb.com.au	
 Template: Divi
+GitHub Theme URI: Gippsland-Web/WWOOF-Theme
 Version: 1
 */
 
